# ComStrip

./: README.md  comstrip.lisp  pyproject.toml  requirements.txt
examples/: example_emacs.sh
src/comstrip/: __init__.py  comstrip.el  comstrip.py  util.py
tests/: hand_tests.py
tests/data/r1/: src1.py
tests/data/r2/: src1.py
tests/data/r3/: src1.py
