[tool.poetry]
name = "comstrip"
version = "0.0.1"
description = "Universal Code Comment Stripper and Diff Analysis tools leveraging Emacs Language support"
license = "MIT"
authors = ["Timothy C. Quinn"]
readme = "README.md"
homepage = "https://pypi.org/project/comstrip"
repository = "https://github.com/JavaScriptDude/comstrip"
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Operating System :: POSIX :: Linux',
    'Operating System :: POSIX :: BSD',
    'Operating System :: POSIX :: SunOS/Solaris',
    'Operating System :: MacOS :: MacOS X',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Software Development',
]

[tool.poetry.dependencies]
python = "^3.7.9"
thefuzz = ">=0.19.0"
python-Levenshtein = ">=0.12.2"
texttable = ">=1.6.3"
tiotrap = ">=0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"